; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_dock.c_eject_dock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_dock.c_eject_dock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dock_station = type { i32 }
%struct.acpi_object_list = type { i32, %union.acpi_object* }
%union.acpi_object = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"_EJ0\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"No _EJ0 support for dock device\0A\00", align 1
@ACPI_TYPE_INTEGER = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [26 x i8] c"Failed to evaluate _EJ0!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dock_station*)* @eject_dock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eject_dock(%struct.dock_station* %0) #0 {
  %2 = alloca %struct.dock_station*, align 8
  %3 = alloca %struct.acpi_object_list, align 8
  %4 = alloca %union.acpi_object, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.dock_station* %0, %struct.dock_station** %2, align 8
  %7 = load %struct.dock_station*, %struct.dock_station** %2, align 8
  %8 = getelementptr inbounds %struct.dock_station, %struct.dock_station* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @acpi_get_handle(i32 %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %6)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i64 @ACPI_FAILURE(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = call i32 @pr_debug(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  br label %31

16:                                               ; preds = %1
  %17 = getelementptr inbounds %struct.acpi_object_list, %struct.acpi_object_list* %3, i32 0, i32 0
  store i32 1, i32* %17, align 8
  %18 = getelementptr inbounds %struct.acpi_object_list, %struct.acpi_object_list* %3, i32 0, i32 1
  store %union.acpi_object* %4, %union.acpi_object** %18, align 8
  %19 = load i32, i32* @ACPI_TYPE_INTEGER, align 4
  %20 = bitcast %union.acpi_object* %4 to i32*
  store i32 %19, i32* %20, align 4
  %21 = bitcast %union.acpi_object* %4 to %struct.TYPE_2__*
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  store i32 1, i32* %22, align 4
  %23 = load %struct.dock_station*, %struct.dock_station** %2, align 8
  %24 = getelementptr inbounds %struct.dock_station, %struct.dock_station* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @acpi_evaluate_object(i32 %25, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), %struct.acpi_object_list* %3, i32* null)
  %27 = call i64 @ACPI_FAILURE(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %16
  %30 = call i32 @pr_debug(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  br label %31

31:                                               ; preds = %14, %29, %16
  ret void
}

declare dso_local i32 @acpi_get_handle(i32, i8*, i32*) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @acpi_evaluate_object(i32, i8*, %struct.acpi_object_list*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
